<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    // Changed about to be more specific.
    <string name="about">About Alexandria</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Open Scanner</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="add_hint">Type in ISBN or tap the Open Scanner button to scan a book.</string>
    <string name="book_cover">Bookcover</string>

    // Changed "Next" to "Add Book" for clarification
    <string name="add_button">Add Book</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>

    // Changed "go back" to just "Back"
    <string name="back_button">Back</string>
    <string name="share_text">A must read book: </string>

    // Strings for Barcode Interface
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
</resources>
